# Ground-Segmentation-Benchmark

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/: common.hpp
include/cascadedseg/: cascaded_groundseg.hpp
include/gaussian/: GaussianFloorSegmentation.cpp  GaussianFloorSegmentation.h  GaussianFloorSegmentation.hpp  GaussianFloorSegmentationParams.h  test_gaussian_floor_segmentation.cpp
include/gpf/: groundplanefit.hpp
include/gpregression/: GaussianFloorSegmentation.h
include/lidar_hd_ground_mapping/: cell.h  grid.cpp  grid.h  ground_mapper_node.cpp  hd_mapper.h  mapping.cpp  mapping.h  package.xml  pfm2pgm.cpp  point.h
include/linefit/: bin.cc  ground_segmentation.cc  ground_segmentation.h  segment.cc  segment.h
include/patchwork/: patchwork.hpp
include/r_gpf/: r_gpf.hpp
include/ransac/: ransac_gpf.hpp
include/urban_road_filter/: data_structures.hpp
include/urban_road_filter/cfg/: LidarFilters.cfg
launch/: cascaded_gseg.launch  gpf.launch  ground_semgentation.launch  gseg_benchmark.launch  patchwork.launch  r_gpf.launch  ransac_gpf.launch  simple.launch  tro_cascaded_gseg.launch  urban_road_filter.launch
launch/deprecated/: gaussian.launch  gpregression.launch
rviz/: basic.rviz  fig_02_3300.rviz  ground4r_gpf.rviz
scripts/semantickitti2bag/: README.md  debug_tf.py  gen_rosbag.sh  kitti2bag.py  kitti2node.py  scribble.py  semantic_kitti_utils.py
scripts/semantickitti2bag/pykitti/: odometry.py  utils.py
shellscripts/: autosave_all.sh  autosave_cascaded.sh  autosave_cascaded_gseg.sh  autosave_gauss.sh  autosave_gaussian.sh  autosave_gpf.sh  autosave_gpregression.sh  autosave_linefit.sh  autosave_patchwork.sh  autosave_r_gpf.sh  autosave_ransac.sh  autosave_urban_road_filter.sh  common.sh
src/: main_offline.cpp  main_rosbag.cpp
src/lib/: cvt.h  datahandle.h
src/utils/: count_num.py  viz_all_frames.py  viz_each_class.cpp  viz_estimates.cpp  viz_one_frame.py
src/utils/ground_labels_04/cascaded_gesg_ground_labels/04/: 000000.csv  000001.csv  000002.csv  000003.csv  000004.csv  000005.csv  000006.csv  000007.csv  000008.csv  000009.csv  000010.csv  000011.csv  000012.csv  000013.csv  000014.csv  000015.csv  000016.csv  000017.csv  000018.csv  000019.csv  000020.csv  000021.csv  000022.csv  000023.csv  000024.csv  000025.csv  (+245 more)
(+1355 files in other folders)
